// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > should render greeting and button with text "Exit" if authorized 1`] = `
<div
  data-testid="app"
>
  <p>
    Вы авторизованы!!!
  </p>
  <button>
    Выйти
  </button>
</div>
`;

exports[`App component > should render of button with text "Login" if not logged in 1`] = `
<div
  data-testid="app"
>
  <button>
    Авторизоваться
  </button>
</div>
`;
